kubectl/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
spec:
  selector:
    app: osaamiskiekko
    tier: backend
    phase: $PHASE
  type: NodePort
  ports:
  - protocol: "TCP"
    port: 1337
    targetPort: http
