kubectl/backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
spec:
  selector:
    app: osaamiskiekko
    tier: backend
    phase: $PHASE
  ports:
  - protocol: "TCP"
    port: 1337
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: osaamiskiekko
      tier: backend
      track: stable
      phase: $PHASE
  replicas: 1
  template:
    metadata:
      labels:
        app: osaamiskiekko
        tier: backend
        track: stable
        phase: $PHASE
    spec:
      volumes:
        - name: my-secrets-volume
          secret:
            secretName: cloudsql-instance-credentials
      containers:
        - name: backend
          # Replaced during Jenkins build. Use 'make deploy' to run locally
          image: $BACKENDIMAGE
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 1337
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
               "-instances=osaamiskiekko:europe-north1:osaamiskiekko-dev-db:5432=tcp:5432",
               "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
          - name: my-secrets-volume
            mountPath: /secrets/cloudsql
            readOnly: true
