kubectl/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: osaamiskiekko
    tier: db
    phase: dev
  ports:
  - protocol: "TCP"
    port: 5432
    targetPort: 5432
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: osaamiskiekko
      tier: db
      track: stable
      phase: dev
  replicas: 1
  template:
    metadata:
      labels:
        app: osaamiskiekko
        tier: db
        track: stable
        phase: dev
    spec:
      containers:
      - name: db
        image: postgres
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 5432
