kubectl/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: osaamiskiekko
    tier: frontend
    phase: dev
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  - protocol: "TCP"
    port: 1337
    targetPort: 1337
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: osaamiskiekko
      tier: frontend
      track: stable
      phase: dev
  replicas: 1
  template:
    metadata:
      labels:
        app: osaamiskiekko
        tier: frontend
        track: stable
        phase: dev
    spec:
      containers:
      - name: nginx
        # Replaced during Jenkins build. Use 'make deploy' to run locally
        image: $FRONTENDIMAGE
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        - name: backendproxy
          containerPort: 1337
        lifecycle:
          preStop:
            exec:
              command: ["nginx","-s","quit"]
